Fix the PMD violations in the library download code
The release build enforces pmd:check, which flagged the two
trim().isEmpty() blank tests (InefficientEmptyStringCheck; isBlank()
avoids the intermediate string) and a single-character string append
(AppendCharacterWithChar).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>